samples/custom-ratelimit-interceptor-service/gateway-interceptor/sample-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prod-http-route-http-bin-api-basic
spec:
  hostnames:
    - prod.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: httpslistener
  rules:
    - backendRefs:
        - group: dp.wso2.com
          kind: Backend
          name: backend
      matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/get/
          method: GET
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /get
    - backendRefs:
        - group: dp.wso2.com
          kind: Backend
          name: backend
      matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/post/
          method: POST
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /post
